--- a/css/probastyle.css
+++ b/css/probastyle.css
@@ -1,38 +1,29 @@
-
-html{padding: 0px;
+html {
+    padding: 0px;
     margin: 0px;
     background-color: rgb(260, 235, 205);
 }
-.navEA{ background-color: rgb(239, 195, 129);
-padding:10px;
- 
 
 
+
+.sor
+{
+    width: 70%;
+    height:30%;
 }
 
+.kepDiv
+{
+    width:50%;
+    height:100%;
+    float:left;
+}
 
- button{
-        border:2px solid rgb(244, 185, 185);
-        border-radius: 9px;
-        background-color: rgb(239, 181, 105);
-        margin-right: 10px;
-        padding-top: 5px;
-        padding-bottom: 5px;
-        text-decoration-style:double;
-        font-weight: bold;}
-        
-   button:hover { background-color: rgb(171, 146, 18);
-    
-     }     
-     a:-webkit-any-link{
-        text-decoration:solid;
-        color:rgb(228, 209, 209);
-        
-     }
-
-    
-        
-
+.kep
+{
+    width:100%;
+    height:100%;
+}
 
 
 
